// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Testes de Snapshot de Componentes > Alertas > deve capturar snapshot de alerta dismissível 1`] = `
<div
  class="alert alert-info"
>
  <div
    class="alert-icon"
  >
    <span
      data-testid="info-icon"
    >
      ℹ️
    </span>
  </div>
  <div
    class="alert-content"
  >
    <div
      class="alert-message"
    >
      Este alerta pode ser fechado pelo usuário.
    </div>
  </div>
  <button
    class="alert-dismiss"
  >
    <span
      data-testid="x-icon"
    >
      ❌
    </span>
  </button>
</div>
`;

exports[`Testes de Snapshot de Componentes > Alertas > deve capturar snapshot de alertas de diferentes tipos 1`] = `
<div>
  <div
    class="alert alert-success"
  >
    <div
      class="alert-icon"
    >
      <span
        data-testid="check-circle-icon"
      >
        ✅
      </span>
    </div>
    <div
      class="alert-content"
    >
      <div
        class="alert-title"
      >
        Sucesso
      </div>
      <div
        class="alert-message"
      >
        Operação realizada com sucesso!
      </div>
    </div>
  </div>
  <div
    class="alert alert-error"
  >
    <div
      class="alert-icon"
    >
      <span
        data-testid="alert-circle-icon"
      >
        ⚠️
      </span>
    </div>
    <div
      class="alert-content"
    >
      <div
        class="alert-title"
      >
        Erro
      </div>
      <div
        class="alert-message"
      >
        Ocorreu um erro ao processar a solicitação.
      </div>
    </div>
  </div>
  <div
    class="alert alert-warning"
  >
    <div
      class="alert-icon"
    >
      <span
        data-testid="alert-circle-icon"
      >
        ⚠️
      </span>
    </div>
    <div
      class="alert-content"
    >
      <div
        class="alert-title"
      >
        Aviso
      </div>
      <div
        class="alert-message"
      >
        Esta ação não pode ser desfeita.
      </div>
    </div>
  </div>
  <div
    class="alert alert-info"
  >
    <div
      class="alert-icon"
    >
      <span
        data-testid="info-icon"
      >
        ℹ️
      </span>
    </div>
    <div
      class="alert-content"
    >
      <div
        class="alert-title"
      >
        Informação
      </div>
      <div
        class="alert-message"
      >
        Informação importante para o usuário.
      </div>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Botões > deve capturar snapshot de botões de diferentes tamanhos 1`] = `
<div>
  <button
    class="btn btn-primary btn-small  "
  >
    Pequeno
  </button>
  <button
    class="btn btn-primary btn-medium  "
  >
    Médio
  </button>
  <button
    class="btn btn-primary btn-large  "
  >
    Grande
  </button>
</div>
`;

exports[`Testes de Snapshot de Componentes > Botões > deve capturar snapshot do botão com loading 1`] = `
<button
  class="btn btn-primary btn-medium  loading"
>
  <span
    class="spinner"
  >
    ⏳
  </span>
  Carregando...
</button>
`;

exports[`Testes de Snapshot de Componentes > Botões > deve capturar snapshot do botão desabilitado 1`] = `
<button
  class="btn btn-primary btn-medium disabled "
  disabled=""
>
  Botão Desabilitado
</button>
`;

exports[`Testes de Snapshot de Componentes > Botões > deve capturar snapshot do botão primário 1`] = `
<button
  class="btn btn-primary btn-medium  "
>
  Botão Primário
</button>
`;

exports[`Testes de Snapshot de Componentes > Botões > deve capturar snapshot do botão secundário 1`] = `
<button
  class="btn btn-secondary btn-medium  "
>
  Botão Secundário
</button>
`;

exports[`Testes de Snapshot de Componentes > Cards > deve capturar snapshot de card básico 1`] = `
<div
  class="card card-default"
>
  <div
    class="card-header"
  >
    <div
      class="card-title-section"
    >
      <h3
        class="card-title"
      >
        Título do Card
      </h3>
    </div>
  </div>
  <div
    class="card-content"
  >
    <p>
      Conteúdo do card
    </p>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Cards > deve capturar snapshot de card com ações 1`] = `
<div
  class="card card-default"
>
  <div
    class="card-header"
  >
    <div
      class="card-title-section"
    >
      <h3
        class="card-title"
      >
        Card com Ações
      </h3>
      <p
        class="card-subtitle"
      >
        Subtítulo do card
      </p>
    </div>
    <div
      class="card-actions"
    >
      <div>
        <button
          class="btn btn-primary btn-small  "
        >
          Editar
        </button>
        <button
          class="btn btn-secondary btn-small  "
        >
          Excluir
        </button>
      </div>
    </div>
  </div>
  <div
    class="card-content"
  >
    <p>
      Conteúdo do card com ações
    </p>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Cards > deve capturar snapshot de cards de diferentes variantes 1`] = `
<div>
  <div
    class="card card-default"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title-section"
      >
        <h3
          class="card-title"
        >
          Card Padrão
        </h3>
      </div>
    </div>
    <div
      class="card-content"
    >
      <p>
        Conteúdo padrão
      </p>
    </div>
  </div>
  <div
    class="card card-success"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title-section"
      >
        <h3
          class="card-title"
        >
          Card de Sucesso
        </h3>
      </div>
    </div>
    <div
      class="card-content"
    >
      <p>
        Operação realizada com sucesso
      </p>
    </div>
  </div>
  <div
    class="card card-warning"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title-section"
      >
        <h3
          class="card-title"
        >
          Card de Aviso
        </h3>
      </div>
    </div>
    <div
      class="card-content"
    >
      <p>
        Atenção necessária
      </p>
    </div>
  </div>
  <div
    class="card card-error"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title-section"
      >
        <h3
          class="card-title"
        >
          Card de Erro
        </h3>
      </div>
    </div>
    <div
      class="card-content"
    >
      <p>
        Erro encontrado
      </p>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Componentes de Feedback > deve capturar snapshot de badges 1`] = `
<div>
  <span
    class="badge badge-success badge-medium"
  >
    Ativo
  </span>
  <span
    class="badge badge-warning badge-medium"
  >
    Pendente
  </span>
  <span
    class="badge badge-error badge-medium"
  >
    Erro
  </span>
  <span
    class="badge badge-info badge-medium"
  >
    Info
  </span>
</div>
`;

exports[`Testes de Snapshot de Componentes > Componentes de Feedback > deve capturar snapshot de barra de progresso 1`] = `
<div>
  <div
    class="progress-container"
  >
    <div
      class="progress-label"
    >
      Progresso
    </div>
    <div
      class="progress-bar progress-default"
    >
      <div
        class="progress-fill"
        style="width: 30%;"
      />
    </div>
    <div
      class="progress-percentage"
    >
      30
      %
    </div>
  </div>
  <div
    class="progress-container"
  >
    <div
      class="progress-label"
    >
      Sucesso
    </div>
    <div
      class="progress-bar progress-success"
    >
      <div
        class="progress-fill"
        style="width: 75%;"
      />
    </div>
    <div
      class="progress-percentage"
    >
      75
      %
    </div>
  </div>
  <div
    class="progress-container"
  >
    <div
      class="progress-label"
    >
      Aviso
    </div>
    <div
      class="progress-bar progress-warning"
    >
      <div
        class="progress-fill"
        style="width: 90%;"
      />
    </div>
    <div
      class="progress-percentage"
    >
      90
      %
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Componentes de Feedback > deve capturar snapshot de tooltip 1`] = `
<div
  class="tooltip-container"
>
  <span>
    Hover para ver tooltip
  </span>
  <div
    class="tooltip tooltip-top"
  >
    Informação adicional
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Estados Vazios > deve capturar snapshot de estado vazio 1`] = `
<div
  class="empty-state"
>
  <div
    class="empty-state-icon"
  >
    <span>
      📋
    </span>
  </div>
  <h3
    class="empty-state-title"
  >
    Nenhum ticket encontrado
  </h3>
  <p
    class="empty-state-description"
  >
    Não há tickets para exibir no momento.
  </p>
  <div
    class="empty-state-action"
  >
    <button
      class="btn btn-primary btn-medium  "
    >
      Criar Ticket
    </button>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Estados Vazios > deve capturar snapshot de estado vazio de busca 1`] = `
<div
  class="empty-state"
>
  <div
    class="empty-state-icon"
  >
    <span>
      🔍
    </span>
  </div>
  <h3
    class="empty-state-title"
  >
    Nenhum resultado encontrado
  </h3>
  <p
    class="empty-state-description"
  >
    Tente ajustar os filtros ou termos de busca.
  </p>
  <div
    class="empty-state-action"
  >
    <button
      class="btn btn-secondary btn-medium  "
    >
      Limpar Filtros
    </button>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Estados de Loading > deve capturar snapshot de skeletons 1`] = `
<div>
  <div
    class="skeleton skeleton-text"
    style="width: 200px; height: 20px;"
  />
  <div
    class="skeleton skeleton-text"
    style="width: 150px; height: 16px;"
  />
  <div
    class="skeleton skeleton-rectangle"
    style="width: 100px; height: 100px;"
  />
  <div
    class="skeleton skeleton-circle"
    style="width: 50px; height: 50px;"
  />
</div>
`;

exports[`Testes de Snapshot de Componentes > Formulários > deve capturar snapshot de formulário completo 1`] = `
<form
  class="form"
>
  <div
    class="form-group"
  >
    <label
      class="form-label required"
    >
      Título
      <span
        class="required-asterisk"
      >
        *
      </span>
    </label>
    <input
      class="form-input  "
      placeholder="Digite o título"
      required=""
      type="text"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label "
    >
      Descrição
    </label>
    <input
      class="form-input  "
      placeholder="Descreva o problema"
      type="textarea"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label required"
    >
      Prioridade
      <span
        class="required-asterisk"
      >
        *
      </span>
    </label>
    <select
      class="form-select  "
      required=""
    >
      <option
        value=""
      >
        Selecione...
      </option>
      <option
        value="low"
      >
        Baixa
      </option>
      <option
        value="medium"
      >
        Média
      </option>
      <option
        value="high"
      >
        Alta
      </option>
    </select>
  </div>
  <div
    class="form-actions"
  >
    <button
      class="btn btn-primary btn-medium  "
    >
      Salvar
    </button>
    <button
      class="btn btn-secondary btn-medium  "
    >
      Cancelar
    </button>
  </div>
</form>
`;

exports[`Testes de Snapshot de Componentes > Formulários > deve capturar snapshot de input com erro 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label "
  >
    Email
  </label>
  <input
    class="form-input error "
    type="text"
    value="email-invalido"
  />
  <span
    class="error-message"
  >
    Email inválido
  </span>
</div>
`;

exports[`Testes de Snapshot de Componentes > Formulários > deve capturar snapshot de input de texto 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label required"
  >
    Nome
    <span
      class="required-asterisk"
    >
      *
    </span>
  </label>
  <input
    class="form-input  "
    placeholder="Digite seu nome"
    required=""
    type="text"
    value=""
  />
</div>
`;

exports[`Testes de Snapshot de Componentes > Formulários > deve capturar snapshot de select 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label required"
  >
    Prioridade
    <span
      class="required-asterisk"
    >
      *
    </span>
  </label>
  <select
    class="form-select  "
    required=""
  >
    <option
      value=""
    >
      Selecione...
    </option>
    <option
      value="low"
    >
      Baixa
    </option>
    <option
      value="medium"
    >
      Média
    </option>
    <option
      value="high"
    >
      Alta
    </option>
  </select>
</div>
`;

exports[`Testes de Snapshot de Componentes > Layouts Complexos > deve capturar snapshot de dashboard layout 1`] = `
<div
  class="dashboard-layout"
>
  <header
    class="dashboard-header"
  >
    <h1>
      Dashboard GLPI
    </h1>
    <div
      class="header-actions"
    >
      <button
        class="btn btn-primary btn-small  "
      >
        Atualizar
      </button>
      <button
        class="btn btn-secondary btn-small  "
      >
        Exportar
      </button>
    </div>
  </header>
  <div
    class="dashboard-content"
  >
    <div
      class="metrics-grid"
    >
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Total de Tickets
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <div
            class="metric-value"
          >
            1,234
          </div>
          <div
            class="metric-change positive"
          >
            +12%
          </div>
        </div>
      </div>
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Tickets Abertos
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <div
            class="metric-value"
          >
            456
          </div>
          <div
            class="metric-change negative"
          >
            -5%
          </div>
        </div>
      </div>
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Tempo Médio
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <div
            class="metric-value"
          >
            2.5h
          </div>
          <div
            class="metric-change neutral"
          >
            0%
          </div>
        </div>
      </div>
    </div>
    <div
      class="charts-grid"
    >
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Tickets por Status
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <div
            class="chart chart-bar"
            data-testid="bar-chart"
          >
            <div
              class="chart-title"
            >
              Tickets por Status
            </div>
          </div>
        </div>
      </div>
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Tickets por Prioridade
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <div
            class="chart chart-pie"
            data-testid="pie-chart"
          >
            <div
              class="chart-title"
            >
              Tickets por Prioridade
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Layouts Complexos > deve capturar snapshot de lista de tickets layout 1`] = `
<div
  class="tickets-layout"
>
  <header
    class="page-header"
  >
    <nav
      class="breadcrumb"
    >
      <span
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          href="/"
        >
          Home
        </a>
      </span>
      <span
        class="breadcrumb-item"
      >
        <span
          class="breadcrumb-separator"
        >
          /
        </span>
        <span
          class="breadcrumb-current"
        >
          Tickets
        </span>
      </span>
    </nav>
    <h1>
      Lista de Tickets
    </h1>
  </header>
  <div
    class="page-content"
  >
    <div
      class="filters-section"
    >
      <div
        class="form-group"
      >
        <input
          class="form-input  "
          placeholder="Buscar tickets..."
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <select
          class="form-select  "
        >
          <option
            value=""
          >
            Status
          </option>
          <option
            value="open"
          >
            Aberto
          </option>
          <option
            value="closed"
          >
            Fechado
          </option>
        </select>
      </div>
      <button
        class="btn btn-primary btn-medium  "
      >
        Filtrar
      </button>
    </div>
    <div
      class="tickets-grid"
    >
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Ticket #001
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <p>
            Problema no sistema de login
          </p>
          <div
            class="ticket-meta"
          >
            <span
              class="badge badge-error badge-medium"
            >
              Alta
            </span>
            <span
              class="badge badge-warning badge-medium"
            >
              Aberto
            </span>
          </div>
        </div>
      </div>
      <div
        class="card card-default"
      >
        <div
          class="card-header"
        >
          <div
            class="card-title-section"
          >
            <h3
              class="card-title"
            >
              Ticket #002
            </h3>
          </div>
        </div>
        <div
          class="card-content"
        >
          <p>
            Solicitação de novo usuário
          </p>
          <div
            class="ticket-meta"
          >
            <span
              class="badge badge-info badge-medium"
            >
              Baixa
            </span>
            <span
              class="badge badge-success badge-medium"
            >
              Fechado
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pagination"
    >
      <div
        class="pagination-info"
      >
        Mostrando 
        1
        -
        10
         de 
        50
         registros
      </div>
      <div
        class="pagination-controls"
      >
        <button
          class="pagination-btn"
          disabled=""
        >
          Anterior
        </button>
        <button
          class="pagination-btn active"
        >
          1
        </button>
        <button
          class="pagination-btn "
        >
          2
        </button>
        <button
          class="pagination-btn "
        >
          3
        </button>
        <button
          class="pagination-btn "
        >
          4
        </button>
        <button
          class="pagination-btn "
        >
          5
        </button>
        <button
          class="pagination-btn"
        >
          Próximo
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Modais > deve capturar snapshot de modais de diferentes tamanhos 1`] = `
<div>
  <div
    class="modal-overlay"
  >
    <div
      class="modal modal-small"
    >
      <div
        class="modal-header"
      >
        <h3
          class="modal-title"
        >
          Modal Pequeno
        </h3>
        <button
          class="modal-close"
        >
          <span
            data-testid="x-icon"
          >
            ❌
          </span>
        </button>
      </div>
      <div
        class="modal-body"
      >
        <p>
          Conteúdo pequeno
        </p>
      </div>
    </div>
  </div>
  <div
    class="modal-overlay"
  >
    <div
      class="modal modal-large"
    >
      <div
        class="modal-header"
      >
        <h3
          class="modal-title"
        >
          Modal Grande
        </h3>
        <button
          class="modal-close"
        >
          <span
            data-testid="x-icon"
          >
            ❌
          </span>
        </button>
      </div>
      <div
        class="modal-body"
      >
        <p>
          Conteúdo extenso com mais informações
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Modais > deve capturar snapshot de modal básico 1`] = `
<div
  class="modal-overlay"
>
  <div
    class="modal modal-medium"
  >
    <div
      class="modal-header"
    >
      <h3
        class="modal-title"
      >
        Modal de Confirmação
      </h3>
      <button
        class="modal-close"
      >
        <span
          data-testid="x-icon"
        >
          ❌
        </span>
      </button>
    </div>
    <div
      class="modal-body"
    >
      <p>
        Tem certeza que deseja realizar esta ação?
      </p>
      <div
        class="modal-actions"
      >
        <button
          class="btn btn-primary btn-medium  "
        >
          Confirmar
        </button>
        <button
          class="btn btn-secondary btn-medium  "
        >
          Cancelar
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Navegação > deve capturar snapshot de breadcrumb 1`] = `
<nav
  class="breadcrumb"
>
  <span
    class="breadcrumb-item"
  >
    <a
      class="breadcrumb-link"
      href="/"
    >
      Home
    </a>
  </span>
  <span
    class="breadcrumb-item"
  >
    <span
      class="breadcrumb-separator"
    >
      /
    </span>
    <a
      class="breadcrumb-link"
      href="/tickets"
    >
      Tickets
    </a>
  </span>
  <span
    class="breadcrumb-item"
  >
    <span
      class="breadcrumb-separator"
    >
      /
    </span>
    <span
      class="breadcrumb-current"
    >
      Detalhes
    </span>
  </span>
</nav>
`;

exports[`Testes de Snapshot de Componentes > Navegação > deve capturar snapshot de tabs 1`] = `
<div
  class="tabs"
>
  <div
    class="tab-list"
  >
    <button
      class="tab "
    >
      Geral
    </button>
    <button
      class="tab active"
    >
      Configurações
    </button>
    <button
      class="tab "
    >
      Avançado
    </button>
  </div>
  <div
    class="tab-content"
  >
    <div>
      Conteúdo de configurações
    </div>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Paginação > deve capturar snapshot de paginação 1`] = `
<div
  class="pagination"
>
  <div
    class="pagination-info"
  >
    Mostrando 
    21
    -
    30
     de 
    100
     registros
  </div>
  <div
    class="pagination-controls"
  >
    <button
      class="pagination-btn"
    >
      Anterior
    </button>
    <button
      class="pagination-btn "
    >
      1
    </button>
    <button
      class="pagination-btn "
    >
      2
    </button>
    <button
      class="pagination-btn active"
    >
      3
    </button>
    <button
      class="pagination-btn "
    >
      4
    </button>
    <button
      class="pagination-btn "
    >
      5
    </button>
    <button
      class="pagination-btn "
    >
      6
    </button>
    <button
      class="pagination-btn "
    >
      7
    </button>
    <button
      class="pagination-btn "
    >
      8
    </button>
    <button
      class="pagination-btn "
    >
      9
    </button>
    <button
      class="pagination-btn "
    >
      10
    </button>
    <button
      class="pagination-btn"
    >
      Próximo
    </button>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Paginação > deve capturar snapshot de paginação na primeira página 1`] = `
<div
  class="pagination"
>
  <div
    class="pagination-info"
  >
    Mostrando 
    1
    -
    10
     de 
    50
     registros
  </div>
  <div
    class="pagination-controls"
  >
    <button
      class="pagination-btn"
      disabled=""
    >
      Anterior
    </button>
    <button
      class="pagination-btn active"
    >
      1
    </button>
    <button
      class="pagination-btn "
    >
      2
    </button>
    <button
      class="pagination-btn "
    >
      3
    </button>
    <button
      class="pagination-btn "
    >
      4
    </button>
    <button
      class="pagination-btn "
    >
      5
    </button>
    <button
      class="pagination-btn"
    >
      Próximo
    </button>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Paginação > deve capturar snapshot de paginação na última página 1`] = `
<div
  class="pagination"
>
  <div
    class="pagination-info"
  >
    Mostrando 
    41
    -
    50
     de 
    50
     registros
  </div>
  <div
    class="pagination-controls"
  >
    <button
      class="pagination-btn"
    >
      Anterior
    </button>
    <button
      class="pagination-btn "
    >
      1
    </button>
    <button
      class="pagination-btn "
    >
      2
    </button>
    <button
      class="pagination-btn "
    >
      3
    </button>
    <button
      class="pagination-btn "
    >
      4
    </button>
    <button
      class="pagination-btn active"
    >
      5
    </button>
    <button
      class="pagination-btn"
      disabled=""
    >
      Próximo
    </button>
  </div>
</div>
`;

exports[`Testes de Snapshot de Componentes > Tabelas > deve capturar snapshot de tabela carregando 1`] = `
<div
  class="table-container"
>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          ID
        </th>
        <th
          class=""
        >
          Nome
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="loading-cell"
          colspan="2"
        >
          <span
            class="spinner"
          >
            ⏳
          </span>
           Carregando...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Testes de Snapshot de Componentes > Tabelas > deve capturar snapshot de tabela com dados 1`] = `
<div
  class="table-container"
>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class="sortable"
        >
          ID
          <span
            class="sort-indicator"
          >
            ↕️
          </span>
        </th>
        <th
          class="sortable"
        >
          Nome
          <span
            class="sort-indicator"
          >
            ↕️
          </span>
        </th>
        <th
          class=""
        >
          Status
        </th>
        <th
          class=""
        >
          Ações
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Item 1
        </td>
        <td>
          Ativo
        </td>
        <td />
      </tr>
      <tr>
        <td>
          2
        </td>
        <td>
          Item 2
        </td>
        <td>
          Inativo
        </td>
        <td />
      </tr>
      <tr>
        <td>
          3
        </td>
        <td>
          Item 3
        </td>
        <td>
          Pendente
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Testes de Snapshot de Componentes > Tabelas > deve capturar snapshot de tabela vazia 1`] = `
<div
  class="table-container"
>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          ID
        </th>
        <th
          class=""
        >
          Nome
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="empty-cell"
          colspan="2"
        >
          Nenhum registro encontrado
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
